# Sigma

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  problem1.sg  problem2.sg  problem3.sg  sigma.cabal  test.sg
.devcontainer/: devcontainer.json
app/: Main.hs
problems/: hello_world.sg  problem3.sg  problem4.sg  problem5.sg  problem6.sg  test.sg
sigma-lang/: package.json
sigma-lang/syntaxes/: sigma.tmLanguage.json
src/Sigma/: Environment.hs  Lexer.x  Parser.hs  Runtime.hs  Types.hs  parser.hs
src/Sigma/Parser/: Core.hs  Expression.hs  Statement.hs
