cabal-version:      3.16
name:               sigma

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           An interpreted language with a focus on applied mathematics and numerical computation

-- A longer description of the package.
-- description:
license:            MIT

-- The package author(s).
author:             Rômulo Alves de Morais Rocha
maintainer:         Unknown

-- A copyright notice.
-- copyright:

build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md
extra-doc-files:    README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:
        Sigma.Lexer
    hs-source-dirs:   src
    build-depends:
        base ^>=4.22.0.0,
        array
    default-language: Haskell2010

executable sigma
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.22.0.0, sigma
    hs-source-dirs:   app
    default-language: Haskell2010
